--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,111 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
-    <head>
-        <title>Add new movie | Jennifer Bland</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    </head>
-    <body>
+  <head>
+    <title>Add Whereabouts</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="stylesheets/jquery-ui.min.css">
 
-        <div class="container">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="jquery-ui.min.js"></script>
+    <script>
+      $(function() {
+        $('.datepicker').datepicker({
+          showOn: "both",
+          dateFormat: "yy-mm-dd" })
+      })
+    </script>
 
-            <br />
-            <H1>Movies in Database</H1>
-            <table class="table table-striped">
-                <tr>
-                    <th>Title</th>
-                    <th>Year</th>
-                    <th>IMDB</th>
-                </tr>
-                {% for movie in movies %}
-                <tr>
-                    <td>{{movie.title}}</td>
-                    <td>{{movie.year}}</td>
-                    <td>{{movie.imdb}}</td>
-                </tr>
+  </head>
+  <body>
+    <div class="container">
+
+      <h1>Add a Whereabouts</h1>
+      <form action="/" method="POST" role='form'>
+        <div class="form-group">
+          <div>Team</div>
+          <div>
+            <select id="team" name="team">
+              {% for team in teams %}
+                <option>{{team}}</option>
+              {% endfor %}
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div>Member</div>
+          <div><select id="member" name="member">
+            {% for member in members %}
+              <option>{{member}}</option>
+            {% endfor %}
+          </select></div>
+        </div>
+        <div class="form-group">
+          <div>Status</div>
+          <div><select id="member" name="member">
+            <option>WFH</option>
+            <option>Training</option>
+            <option>Conference</option>
+            <option>Vacation</option>
+            <option>Out</option>
+          </select></div>
+        </div>
+        <div class="form-group">
+          <div>Start Date</div>
+          <div>
+            <input type="text" class="datepicker form-control" name="startDate" id="startDate" placeholder="Start Date" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div>Start Date</div>
+          <div>
+            <input type="text" class="datepicker form-control" name="endDate" id="endDate" placeholder="End Date" required>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+
+      <!--
+        <table class="table table-striped">
+          <tr>
+            <td>Team: </td>
+            <td>
+              <select id="team">
+                {% for team in teams %}
+                  <option>{{team}}</option>
                 {% endfor %}
-            </table>
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td>Member: </td>
+            <td>
+              <select id="member">
+                {% for member in members %}
+                  <option>{{member}}</option>
+                {% endfor %}
+              </select>
+            </td>
+          </tr>
+          <tr>
+            <td>Start Date: </td>
+            <td>
+              <input id="startDate" />
+            </td>
+          </tr>
+          <tr>
+            <td>End Date: </td>
+            <td>
+              <input id="endDate" />
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2"><button type="submit" class="btn btn-primary">Submit</button></td>
+          </tr>
+        </table>
+      </form>
+
+
 
             <hr>
 
@@ -44,7 +126,10 @@
 
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-        </div>
 
-    </body>
+
+
+    </div>
+-->
+  </body>
 </html>
